[tool.poetry]
name = "s3-uploader"
version = "0.1.0"
description = "Example to upload files to an AWS S3 bucket."
authors = ["Carlos Alberto Giralt Torriente <cagiraltt@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
boto3 = "^1.26.83"

# misc
poetry = "^1.4.0"
pytest = "^7.2.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 80
src_paths = ["app"]
skip_glob = ["app/**/__init__.py"]
skip_gitignore = true


[tool.black]
line-length = 80
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
    /(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | __pycache__
  | build
  | dist
  | docs
    )/
  '''
